Fix positioning of marquee tag widget -- was invisible
tracks internal commit 8537e3b850f219bc16d46fdd245281241d53f0f4

--- a/plugins/Ajax/htdocs/images/tag-ui.css
+++ b/plugins/Ajax/htdocs/images/tag-ui.css
@@ -329,11 +329,23 @@ div.tag-display {
 	display: inline;
 }
 
+
+
 div.tag-widget-stub,
 div.tag-widget {
 	display: block;
 	position: absolute;
 	background-color: transparent;
+}
+
+
+
+div.head div.tag-widget-stub,
+{
+	display: block;
+	background-color: transparent;
+	margin-left:10em;
+	margin-top:2.8em;
 }
 
 
